aws-terraform/terraform-concepts/terraform-provisioner/example-01/sg.tf
resource "aws_security_group" "jenkins_sg" {
  name_prefix = "sg"
  description = "Allow all inbound traffic from port 22 and 80"
  vpc_id      = "vpc-068852590ea4b093b"

  tags = {
    Name = "Jenkins host SG"
  }
}

resource "aws_security_group_rule" "webserver_allow_all_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.jenkins_sg.id
}

resource "aws_security_group_rule" "allow_8080" {
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.jenkins_sg.id
}

resource "aws_security_group_rule" "webserver_allow_all_outbound" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.jenkins_sg.id
}
